--- a/fish-store/package.json
+++ b/fish-store/package.json
@@ -8,16 +8,22 @@
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer-stylus": "^1.0.0",
     "firebase": "^7.22.0",
+    "prop-types": "^15.7.2",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
+    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
+    "now-build": "npm run build && mv build dist",
+    "styles:watch": "npm run styles -- -w"
   },
   "eslintConfig": {
     "extends": "react-app"
