--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react-redux": "^7.2.0",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "yarn": "^1.22.4"
